// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MenuWithButtonActivator > renders correctly 1`] = `
<v-menu-stub
  activatorprops="[object Object]"
  attach="false"
  capturefocus="true"
  closedelay="250"
  closeonback="true"
  closeoncontentclick="true"
  contained="false"
  disabled="false"
  disableinitialfocus="false"
  eager="false"
  location="bottom right"
  locationstrategy="connected"
  modelvalue="false"
  noclickanimation="false"
  opendelay="300"
  openonhover="false"
  origin="auto"
  persistent="false"
  retainfocus="false"
  scrim="false"
  scrollstrategy="reposition"
  sticktotarget="false"
  submenu="false"
  transition="[object Object]"
  viewportmargin="12"
  zindex="2000"
>
  <v-list-stub
    activatable="false"
    border="false"
    density="default"
    disabled="false"
    filterable="false"
    itemchildren="children"
    itemprops="props"
    items=""
    itemsregistration="render"
    itemtitle="title"
    itemtype="type"
    itemvalue="value"
    lines="one"
    mandatory="false"
    nav="false"
    navigationstrategy="focus"
    openstrategy="list"
    returnobject="false"
    selectable="false"
    selectstrategy="single-leaf"
    slim="false"
    tag="div"
    tile="false"
    variant="text"
    width="300px"
  >
    
    <v-list-item-stub
      active="false"
      border="false"
      color="primary"
      density="compact"
      disabled="false"
      exact="false"
      lines="false"
      nav="false"
      replace="false"
      ripple="true"
      slim="false"
      tag="div"
      tile="false"
      variant="text"
    >
      <list-item-contents-stub
        checkbox="false"
        color="primary"
        dense="true"
        disabled="false"
        error="false"
        flagcountrycode=""
        icon=""
        iconcolor=""
        iconsize=""
        indeterminate="false"
        inputvalue="false"
        isgroupactivatoritem="false"
        issingleselect="false"
        loading="false"
        primaryhighlight=""
        primarytext="test 1"
        secondaryhighlight=""
        secondarytext="test 1 description"
        tertiaryhighlight=""
        tertiarytext="lorem ipsum 1"
        tertiarytextclasses=""
      />
    </v-list-item-stub>
    <v-list-item-stub
      active="false"
      border="false"
      color="primary"
      density="compact"
      disabled="false"
      exact="false"
      lines="false"
      nav="false"
      replace="false"
      ripple="true"
      slim="false"
      tag="div"
      tile="false"
      variant="text"
    >
      <list-item-contents-stub
        checkbox="false"
        color="primary"
        dense="true"
        disabled="false"
        error="false"
        flagcountrycode=""
        icon=""
        iconcolor=""
        iconsize=""
        indeterminate="false"
        inputvalue="false"
        isgroupactivatoritem="false"
        issingleselect="false"
        loading="false"
        primaryhighlight=""
        primarytext="test 2"
        secondaryhighlight=""
        secondarytext="test 2 description"
        tertiaryhighlight=""
        tertiarytext="lorem ipsum 2"
        tertiarytextclasses=""
      />
    </v-list-item-stub>
    
  </v-list-stub>
</v-menu-stub>
`;

exports[`MenuWithButtonActivator > renders correctly when disabled 1`] = `
<v-menu-stub
  activatorprops="[object Object]"
  attach="false"
  capturefocus="true"
  closedelay="250"
  closeonback="true"
  closeoncontentclick="true"
  contained="false"
  disabled="true"
  disableinitialfocus="false"
  eager="false"
  location="bottom right"
  locationstrategy="connected"
  modelvalue="false"
  noclickanimation="false"
  opendelay="300"
  openonhover="false"
  origin="auto"
  persistent="false"
  retainfocus="false"
  scrim="false"
  scrollstrategy="reposition"
  sticktotarget="false"
  submenu="false"
  transition="[object Object]"
  viewportmargin="12"
  zindex="2000"
>
  <v-list-stub
    activatable="false"
    border="false"
    density="default"
    disabled="false"
    filterable="false"
    itemchildren="children"
    itemprops="props"
    items=""
    itemsregistration="render"
    itemtitle="title"
    itemtype="type"
    itemvalue="value"
    lines="one"
    mandatory="false"
    nav="false"
    navigationstrategy="focus"
    openstrategy="list"
    returnobject="false"
    selectable="false"
    selectstrategy="single-leaf"
    slim="false"
    tag="div"
    tile="false"
    variant="text"
    width="300px"
  >
    
    <v-list-item-stub
      active="false"
      border="false"
      color="primary"
      density="compact"
      disabled="false"
      exact="false"
      lines="false"
      nav="false"
      replace="false"
      ripple="true"
      slim="false"
      tag="div"
      tile="false"
      variant="text"
    >
      <list-item-contents-stub
        checkbox="false"
        color="primary"
        dense="true"
        disabled="false"
        error="false"
        flagcountrycode=""
        icon=""
        iconcolor=""
        iconsize=""
        indeterminate="false"
        inputvalue="false"
        isgroupactivatoritem="false"
        issingleselect="false"
        loading="false"
        primaryhighlight=""
        primarytext="test 1"
        secondaryhighlight=""
        secondarytext="test 1 description"
        tertiaryhighlight=""
        tertiarytext="lorem ipsum 1"
        tertiarytextclasses=""
      />
    </v-list-item-stub>
    <v-list-item-stub
      active="false"
      border="false"
      color="primary"
      density="compact"
      disabled="false"
      exact="false"
      lines="false"
      nav="false"
      replace="false"
      ripple="true"
      slim="false"
      tag="div"
      tile="false"
      variant="text"
    >
      <list-item-contents-stub
        checkbox="false"
        color="primary"
        dense="true"
        disabled="false"
        error="false"
        flagcountrycode=""
        icon=""
        iconcolor=""
        iconsize=""
        indeterminate="false"
        inputvalue="false"
        isgroupactivatoritem="false"
        issingleselect="false"
        loading="false"
        primaryhighlight=""
        primarytext="test 2"
        secondaryhighlight=""
        secondarytext="test 2 description"
        tertiaryhighlight=""
        tertiarytext="lorem ipsum 2"
        tertiarytextclasses=""
      />
    </v-list-item-stub>
    
  </v-list-stub>
</v-menu-stub>
`;

exports[`MenuWithButtonActivator > renders correctly with a different button icon 1`] = `
<v-menu-stub
  activatorprops="[object Object]"
  attach="false"
  capturefocus="true"
  closedelay="250"
  closeonback="true"
  closeoncontentclick="true"
  contained="false"
  disabled="false"
  disableinitialfocus="false"
  eager="false"
  location="bottom right"
  locationstrategy="connected"
  modelvalue="false"
  noclickanimation="false"
  opendelay="300"
  openonhover="false"
  origin="auto"
  persistent="false"
  retainfocus="false"
  scrim="false"
  scrollstrategy="reposition"
  sticktotarget="false"
  submenu="false"
  transition="[object Object]"
  viewportmargin="12"
  zindex="2000"
>
  <v-list-stub
    activatable="false"
    border="false"
    density="default"
    disabled="false"
    filterable="false"
    itemchildren="children"
    itemprops="props"
    items=""
    itemsregistration="render"
    itemtitle="title"
    itemtype="type"
    itemvalue="value"
    lines="one"
    mandatory="false"
    nav="false"
    navigationstrategy="focus"
    openstrategy="list"
    returnobject="false"
    selectable="false"
    selectstrategy="single-leaf"
    slim="false"
    tag="div"
    tile="false"
    variant="text"
    width="300px"
  >
    
    <v-list-item-stub
      active="false"
      border="false"
      color="primary"
      density="compact"
      disabled="false"
      exact="false"
      lines="false"
      nav="false"
      replace="false"
      ripple="true"
      slim="false"
      tag="div"
      tile="false"
      variant="text"
    >
      <list-item-contents-stub
        checkbox="false"
        color="primary"
        dense="true"
        disabled="false"
        error="false"
        flagcountrycode=""
        icon=""
        iconcolor=""
        iconsize=""
        indeterminate="false"
        inputvalue="false"
        isgroupactivatoritem="false"
        issingleselect="false"
        loading="false"
        primaryhighlight=""
        primarytext="test 1"
        secondaryhighlight=""
        secondarytext="test 1 description"
        tertiaryhighlight=""
        tertiarytext="lorem ipsum 1"
        tertiarytextclasses=""
      />
    </v-list-item-stub>
    <v-list-item-stub
      active="false"
      border="false"
      color="primary"
      density="compact"
      disabled="false"
      exact="false"
      lines="false"
      nav="false"
      replace="false"
      ripple="true"
      slim="false"
      tag="div"
      tile="false"
      variant="text"
    >
      <list-item-contents-stub
        checkbox="false"
        color="primary"
        dense="true"
        disabled="false"
        error="false"
        flagcountrycode=""
        icon=""
        iconcolor=""
        iconsize=""
        indeterminate="false"
        inputvalue="false"
        isgroupactivatoritem="false"
        issingleselect="false"
        loading="false"
        primaryhighlight=""
        primarytext="test 2"
        secondaryhighlight=""
        secondarytext="test 2 description"
        tertiaryhighlight=""
        tertiarytext="lorem ipsum 2"
        tertiarytextclasses=""
      />
    </v-list-item-stub>
    
  </v-list-stub>
</v-menu-stub>
`;

exports[`MenuWithButtonActivator > renders correctly with no items 1`] = `
<v-menu-stub
  activatorprops="[object Object]"
  attach="false"
  capturefocus="true"
  closedelay="250"
  closeonback="true"
  closeoncontentclick="true"
  contained="false"
  disabled="false"
  disableinitialfocus="false"
  eager="false"
  location="bottom right"
  locationstrategy="connected"
  modelvalue="false"
  noclickanimation="false"
  opendelay="300"
  openonhover="false"
  origin="auto"
  persistent="false"
  retainfocus="false"
  scrim="false"
  scrollstrategy="reposition"
  sticktotarget="false"
  submenu="false"
  transition="[object Object]"
  viewportmargin="12"
  zindex="2000"
>
  <v-list-stub
    activatable="false"
    border="false"
    density="default"
    disabled="false"
    filterable="false"
    itemchildren="children"
    itemprops="props"
    items=""
    itemsregistration="render"
    itemtitle="title"
    itemtype="type"
    itemvalue="value"
    lines="one"
    mandatory="false"
    nav="false"
    navigationstrategy="focus"
    openstrategy="list"
    returnobject="false"
    selectable="false"
    selectstrategy="single-leaf"
    slim="false"
    tag="div"
    tile="false"
    variant="text"
    width="300px"
  >
    
    
  </v-list-stub>
</v-menu-stub>
`;

exports[`MenuWithButtonActivator > renders correctly without secondary text fields 1`] = `
<v-menu-stub
  activatorprops="[object Object]"
  attach="false"
  capturefocus="true"
  closedelay="250"
  closeonback="true"
  closeoncontentclick="true"
  contained="false"
  disabled="false"
  disableinitialfocus="false"
  eager="false"
  location="bottom right"
  locationstrategy="connected"
  modelvalue="false"
  noclickanimation="false"
  opendelay="300"
  openonhover="false"
  origin="auto"
  persistent="false"
  retainfocus="false"
  scrim="false"
  scrollstrategy="reposition"
  sticktotarget="false"
  submenu="false"
  transition="[object Object]"
  viewportmargin="12"
  zindex="2000"
>
  <v-list-stub
    activatable="false"
    border="false"
    density="default"
    disabled="false"
    filterable="false"
    itemchildren="children"
    itemprops="props"
    items=""
    itemsregistration="render"
    itemtitle="title"
    itemtype="type"
    itemvalue="value"
    lines="one"
    mandatory="false"
    nav="false"
    navigationstrategy="focus"
    openstrategy="list"
    returnobject="false"
    selectable="false"
    selectstrategy="single-leaf"
    slim="false"
    tag="div"
    tile="false"
    variant="text"
    width="300px"
  >
    
    <v-list-item-stub
      active="false"
      border="false"
      color="primary"
      density="compact"
      disabled="false"
      exact="false"
      lines="false"
      nav="false"
      replace="false"
      ripple="true"
      slim="false"
      tag="div"
      tile="false"
      variant="text"
    >
      <list-item-contents-stub
        checkbox="false"
        color="primary"
        dense="true"
        disabled="false"
        error="false"
        flagcountrycode=""
        icon=""
        iconcolor=""
        iconsize=""
        indeterminate="false"
        inputvalue="false"
        isgroupactivatoritem="false"
        issingleselect="false"
        loading="false"
        primaryhighlight=""
        primarytext="test 1 description"
        secondaryhighlight=""
        secondarytext=""
        tertiaryhighlight=""
        tertiarytext=""
        tertiarytextclasses=""
      />
    </v-list-item-stub>
    <v-list-item-stub
      active="false"
      border="false"
      color="primary"
      density="compact"
      disabled="false"
      exact="false"
      lines="false"
      nav="false"
      replace="false"
      ripple="true"
      slim="false"
      tag="div"
      tile="false"
      variant="text"
    >
      <list-item-contents-stub
        checkbox="false"
        color="primary"
        dense="true"
        disabled="false"
        error="false"
        flagcountrycode=""
        icon=""
        iconcolor=""
        iconsize=""
        indeterminate="false"
        inputvalue="false"
        isgroupactivatoritem="false"
        issingleselect="false"
        loading="false"
        primaryhighlight=""
        primarytext="test 2 description"
        secondaryhighlight=""
        secondarytext=""
        tertiaryhighlight=""
        tertiarytext=""
        tertiarytextclasses=""
      />
    </v-list-item-stub>
    
  </v-list-stub>
</v-menu-stub>
`;

exports[`MenuWithButtonActivator > renders correctly without tertiary text fields 1`] = `
<v-menu-stub
  activatorprops="[object Object]"
  attach="false"
  capturefocus="true"
  closedelay="250"
  closeonback="true"
  closeoncontentclick="true"
  contained="false"
  disabled="false"
  disableinitialfocus="false"
  eager="false"
  location="bottom right"
  locationstrategy="connected"
  modelvalue="false"
  noclickanimation="false"
  opendelay="300"
  openonhover="false"
  origin="auto"
  persistent="false"
  retainfocus="false"
  scrim="false"
  scrollstrategy="reposition"
  sticktotarget="false"
  submenu="false"
  transition="[object Object]"
  viewportmargin="12"
  zindex="2000"
>
  <v-list-stub
    activatable="false"
    border="false"
    density="default"
    disabled="false"
    filterable="false"
    itemchildren="children"
    itemprops="props"
    items=""
    itemsregistration="render"
    itemtitle="title"
    itemtype="type"
    itemvalue="value"
    lines="one"
    mandatory="false"
    nav="false"
    navigationstrategy="focus"
    openstrategy="list"
    returnobject="false"
    selectable="false"
    selectstrategy="single-leaf"
    slim="false"
    tag="div"
    tile="false"
    variant="text"
    width="300px"
  >
    
    <v-list-item-stub
      active="false"
      border="false"
      color="primary"
      density="compact"
      disabled="false"
      exact="false"
      lines="false"
      nav="false"
      replace="false"
      ripple="true"
      slim="false"
      tag="div"
      tile="false"
      variant="text"
    >
      <list-item-contents-stub
        checkbox="false"
        color="primary"
        dense="true"
        disabled="false"
        error="false"
        flagcountrycode=""
        icon=""
        iconcolor=""
        iconsize=""
        indeterminate="false"
        inputvalue="false"
        isgroupactivatoritem="false"
        issingleselect="false"
        loading="false"
        primaryhighlight=""
        primarytext="test 1 description"
        secondaryhighlight=""
        secondarytext="test 1"
        tertiaryhighlight=""
        tertiarytext=""
        tertiarytextclasses=""
      />
    </v-list-item-stub>
    <v-list-item-stub
      active="false"
      border="false"
      color="primary"
      density="compact"
      disabled="false"
      exact="false"
      lines="false"
      nav="false"
      replace="false"
      ripple="true"
      slim="false"
      tag="div"
      tile="false"
      variant="text"
    >
      <list-item-contents-stub
        checkbox="false"
        color="primary"
        dense="true"
        disabled="false"
        error="false"
        flagcountrycode=""
        icon=""
        iconcolor=""
        iconsize=""
        indeterminate="false"
        inputvalue="false"
        isgroupactivatoritem="false"
        issingleselect="false"
        loading="false"
        primaryhighlight=""
        primarytext="test 2 description"
        secondaryhighlight=""
        secondarytext="test 2"
        tertiaryhighlight=""
        tertiarytext=""
        tertiarytextclasses=""
      />
    </v-list-item-stub>
    
  </v-list-stub>
</v-menu-stub>
`;
